fix: adjust overflow behavior and margin in SubmitMemorModal styles

--- a/src/Components/SubmitMemorModal/SubmitMemorModal.css
+++ b/src/Components/SubmitMemorModal/SubmitMemorModal.css
@@ -31,6 +31,7 @@
   padding: 30px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
   overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
   transform: translateX(100%);
   animation: slideInFromRight 0.4s ease-out forwards;
@@ -86,7 +87,7 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   color: #cac4d0;
   gap: 10px;
 }
